# agentlens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
agentlens/: __init__.py  __main__.py  cli.py  client.py  models.py
agentlens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentlens/writers/: __init__.py  base.py  file.py  postgres.py
examples/: basic.py
tests/: test_cli.py  test_client.py  test_hash_chain.py  test_postgres_writer.py
