[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "0.1.0"
description = "Audit logging for Claude AI agents — transparent, tamper-evident, OSS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest", "pytest-asyncio", "anthropic"]

[project.urls]
Homepage = "https://github.com/wolve/agentlens"
Repository = "https://github.com/wolve/agentlens"
Issues = "https://github.com/wolve/agentlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]
