[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "0.1.0"
description = "Audit logging for Claude AI agents — transparent, tamper-evident, OSS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest", "pytest-asyncio", "anthropic", "psycopg2-binary>=2.9"]

[project.urls]
Homepage = "https://github.com/wolvesgale/agentlens"
Repository = "https://github.com/wolvesgale/agentlens"
Issues = "https://github.com/wolvesgale/agentlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]
