[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens-io"
version = "0.3.1"
description = "Audit logging for Claude AI agents — transparent, tamper-evident, OSS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest", "pytest-asyncio", "anthropic", "psycopg2-binary>=2.9"]

[project.scripts]
agentlens = "agentlens.cli:main"

[project.urls]
Homepage = "https://github.com/agentlens-io/agentlens"
Repository = "https://github.com/agentlens-io/agentlens"
Issues = "https://github.com/agentlens-io/agentlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]
